docs: 补充链路讲解注释并新增工程问题 TODO 清单